fix: Fix alerts disappearing behind sticky email headers

--- a/app/wwwroot/css/site.css
+++ b/app/wwwroot/css/site.css
@@ -11,6 +11,7 @@ h1 {
   position: fixed;
   top: 50vh;
   transform: translate(-50%, -50%);
+  z-index: 1020;
 }
 
 .logo {
